# Jump2Django

./: README.md  pyproject.toml  requirements.txt
.secrets/: secret.json
common/: urls.py  views.py
config/: settings.py  urls.py
pybo/: admin.py  forms.py  urls.py  views.py
pybo/management/commands/: push_pybo_data.py
pybo/migrations/: 0001_initial.py  0002_question_author.py  0003_answer_author.py  0004_auto_20221026_0123.py
pybo/views/: answer_views.py  base_views.py  question_views.py
templates/: base.html  navbar.html
templates/pybo/: question_detail.html  question_form.html  question_list.html
